# sample-agentic-platform

./: .gitignore  DEPLOYMENT.md  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  pytest.ini  test_agentic_chat.py  test_streaming.py
.github/workflows/: ecr-push.yml
alembic/: README  env.py
alembic/versions/: bae62ffcf43c_create_new_postgres_user.py  ceb61c324258_create_memory_tables.py  cf7b9ef1aebd_create_user_table.py
bootstrap/: README.md  bootstrap.yaml  eks-bootstrap.sh  github-bootstrap.yaml  infra-bootstrap.yaml  langfuse-bootstrap.sh
deploy/: README.md  build-container.sh  deploy-agent.sh  deploy-all-agents.sh  deploy-application.sh  deploy-cluster-base.sh  deploy-core-services.sh  deploy-external-secrets.sh  deploy-gateways.sh  deploy-langfuse.sh  deploy-lb-controller.sh  deploy-litellm.sh  deploy-llm-gateway.sh  deploy-memory-gateway.sh  deploy-otel-collectors.sh  deploy-retrieval-gateway.sh  deploy-storage.sh  run-migrations-on-bastion.sh  run-migrations.sh
docker/agentic-chat/: Dockerfile
docker/diy-agent/: Dockerfile
docker/evaluator-optimizer/: Dockerfile
docker/langgraph-chat/: Dockerfile
docker/llm-gateway/: Dockerfile
docker/memory-gateway/: Dockerfile
docker/orchestrator/: Dockerfile
docker/parallelization/: Dockerfile
docker/prompt-chaining/: Dockerfile
docker/pydanticai-agent/: Dockerfile
docker/retrieval-gateway/: Dockerfile
docker/routing/: Dockerfile
docker/strands-glue-athena/: Dockerfile
infrastructure/: README.md
infrastructure/terraform/: bastion.tf  cloudfront.tf  cognito.tf  dynamodb.tf  eks.tf  elasticache.tf  irsa.tf  kms.tf  knowledgebase.tf  litellm.tf  loadbalancer.tf  locals.tf  main.tf  networking.tf  opensearch.tf  outputs.tf  parameterstore.tf  postgres.tf  providers.tf  s3.tf  variables.tf
labs/: README.md
labs/module1/: README.md
script/: create_test_user.py  get_m2m_token.py
tests/: conftest.py
(+411 files in other folders)
